<resources>
    <string name="app_name">Lugares</string>
    <string name="tv_correo">Correo Electrónico</string>
    <string name="tv_clave">Contraseña</string>
    <string name="title_activity_principal">Principal</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="bt_actualizar">Actualizar</string>
    <string name="bt_eliminar">Eliminar</string>

    <string name="menu_lugar">Lugares</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="msg_nombre">Nombre del lugar</string>
    <string name="msg_correo">Correo (xxxx@xxx.com)</string>
    <string name="msg_imagen">Imagen del lugar</string>
    <string name="msg_telefono">Teléfono (xxxx-xxxx)</string>
    <string name="msg_web">Sitio Web</string>
    <string name="bt_agregar">Agregar</string>

    <string name="menu_delete">Eliminar Lugar</string>
    <string name="deleted">Eliminado</string>

    <string name="si">Si</string>
    <string name="no">No</string>
    <string name="seguro_borrar">Seguro que desea borrar</string>

    <string name="latitud">Latitud</string>
    <string name="longitud">Longitud</string>
    <string name="altura">Altura</string>
    <string name="msg_datos">No hay datos</string>
    <string name="msg_saludos">Hola</string>
    <string name="msg_mensaje_correo">Saludos</string>
    <string name="error">N/A</string>

    <string name="msgEscucharAudio">Escuchar nota de audio</string>
    <string name="graba_pausa">Graba o pausa grabación</string>
    <string name="escuchaPlay">Escucha grabación</string>
    <string name="delete_nota">Borra nota de audio</string>
    <string name="play_nota">Escuchar nota de audio</string>
    <string name="rec_stop_nota">Graba o detiene nota de audio</string>
    <string name="take_photo">Toma foto</string>
    <string name="rotate_l">Rota izquierda</string>
    <string name="rotale_r">Rota a la derecha</string>
    <string name="msg_graba_audio">Grabando nota de audio</string>
    <string name="msg_detener_audio">Nota de audio detenida</string>
    <string name="msg_subiendo_audio">Subiendo Nota Audio</string>
    <string name="msg_subiendo_imagen">Subiendo imagen</string>
</resources>